--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -1,2 +1,4 @@
+<button class="btn btn-primary" [disabled]="!alloweNewServer" >Add Server</button>
+
 <app-server></app-server>
 <app-server></app-server>
