--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -1,4 +1,10 @@
-<button class="btn btn-primary" [disabled]="!alloweNewServer" >Add Server</button>
+<button class="btn btn-primary" [disabled]="!allowNewServer" >Add Server</button>
+
+<!--String Interpolation-->
+<p>{{allowNewServer}}</p>
+
+<!--Property Bidning-->
+<p [innerText]="allowNewServer"></p>
 
 <app-server></app-server>
 <app-server></app-server>
