--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -1,7 +1,11 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer" >Add Server</button>
+<button class="btn btn-primary" 
+        [disabled]="!allowNewServer" 
+        (click)="onCreateServer()"
+        >Add Server</button>
 
 <!--String Interpolation-->
 <p>{{allowNewServer}}</p>
+<p>{{serverCreationStatus}}</p>
 
 <!--Property Bidning-->
 <p [innerText]="allowNewServer"></p>
