--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -1,3 +1,8 @@
+<input type="text" 
+       class="form-control"
+       (input)="onUpdateServerName($event)"
+       >
+
 <button class="btn btn-primary" 
         [disabled]="!allowNewServer" 
         (click)="onCreateServer()"
@@ -6,6 +11,7 @@
 <!--String Interpolation-->
 <p>{{allowNewServer}}</p>
 <p>{{serverCreationStatus}}</p>
+<p>{{serverName}}</p>
 
 <!--Property Bidning-->
 <p [innerText]="allowNewServer"></p>
