--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -1,8 +1,16 @@
+<!--
 <input type="text" 
        class="form-control"
        (input)="onUpdateServerName($event)"
        >
+-->
 
+<input type="text" 
+       class="form-control"
+       [(ngModel)]="serverName"
+       >
+
+<br>
 <button class="btn btn-primary" 
         [disabled]="!allowNewServer" 
         (click)="onCreateServer()"
