--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -16,13 +16,20 @@
         (click)="onCreateServer()"
         >Add Server</button>
 
+        
 <!--String Interpolation-->
+<!--
 <p>{{allowNewServer}}</p>
 <p>{{serverCreationStatus}}</p>
 <p>{{serverName}}</p>
+-->
 
 <!--Property Bidning-->
-<p [innerText]="allowNewServer"></p>
+<!--
+    <p [innerText]="allowNewServer"></p>
+-->
+
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 
 <app-server></app-server>
 <app-server></app-server>
