--- a/da-first-app/src/app/server/server.component.html
+++ b/da-first-app/src/app/server/server.component.html
@@ -1,1 +1,5 @@
-<p [ngStyle]="{ backgroundColor: getColor() }">Service with ID {{ serverId }} is {{ getServerStatus() }}.</p>
+<p [ngStyle]="{ backgroundColor: getColor() }"
+   [ngClass]="{ online: serverStatus === 'online', offline: serverStatus === 'offline' }" 
+>
+Service with ID {{ serverId }} is {{ serverStatus }}.
+</p>
