--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -38,5 +38,4 @@
 
 <p *ngIf="!serverCreated">No server was created!</p>
 
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
