--- a/da-first-app/src/app/servers/servers.component.html
+++ b/da-first-app/src/app/servers/servers.component.html
@@ -37,5 +37,4 @@
 </ng-template>
 
 <p *ngIf="!serverCreated">No server was created!</p>
-
-<app-server *ngFor="let server of servers"></app-server>
+<app-server *ngFor="let server of servers; let i = index;"></app-server>
