--- a/recipe-app/src/app/app.component.html
+++ b/recipe-app/src/app/app.component.html
@@ -1,8 +1,13 @@
-<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      Hello, World!
+      <app-header></app-header>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
