--- a/cmp-databinding-start/src/app/server-element/server-element.component.html
+++ b/cmp-databinding-start/src/app/server-element/server-element.component.html
@@ -2,8 +2,8 @@
     <div class="panel-heading">{{ element.Name }}</div>
     <div class="panel-body">
         <p>
-            <strong *ngIf="element.Type === 'server'" style="color: red">{{ element.Content }}</strong>
-            <em *ngIf="element.Type === 'blueprint'">{{ element.Content }}</em>
+            <strong *ngIf="element.IsServer()" style="color: red">{{ element.Content }}</strong>
+            <em *ngIf="element.IsBlueprint()">{{ element.Content }}</em>
         </p>
     </div>
 </div>
