--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -1,11 +1,13 @@
 <div class="container">
-  <app-cockpit></app-cockpit>
+  <app-cockpit 
+    (serverCreated)="onServerAdded($event)"
+    (blueprintCreated)="onBlueprintAdded($event)"></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
       <app-server-element
        *ngFor="let server of serverElements"
-       [element]="server"
+       [server-element]="server"
        ></app-server-element>
     </div>
   </div>
