--- a/cmp-databinding-start/src/app/server-element/server-element.component.html
+++ b/cmp-databinding-start/src/app/server-element/server-element.component.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-    <div class="panel-heading">{{ element.Name }}</div>
+    <div class="panel-heading" #heading>{{ element.Name }}</div>
     <div class="panel-body">
       <ng-content></ng-content>
     </div>
