--- a/cmp-databinding-start/src/app/app.component.html
+++ b/cmp-databinding-start/src/app/app.component.html
@@ -13,7 +13,7 @@
          Angular by default will not allow HTML between component tags.
          To override this <ng-content></ng-contnet> is needed in the component
         -->
-        <p>
+        <p #contentParagraph>
           <strong *ngIf="server.IsServer()" style="color: red">{{ server.Content }}</strong>
           <em *ngIf="server.IsBlueprint()">{{ server.Content }}</em>
         </p>
