--- a/recipe-app/src/app/app.component.html
+++ b/recipe-app/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (OnNavigationClick)="OnNavigationChange($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="TabSelected === 'recipe-list' || TabSelected === 'home'"></app-recipes>
+      <app-shopping-list *ngIf="TabSelected === 'shopping-list'"></app-shopping-list>
     </div>
   </div>
 </div>
